--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,14 @@ services:
       - NODE_ENV=production
       - MEDIASOUP_LISTEN_IP=0.0.0.0
       - MEDIASOUP_ANNOUNCED_IP=${HOST_IP}
+      - RTC_MIN_PORT=${MEDIASOUP_RTC_MIN_PORT}
+      - RTC_MAX_PORT=${MEDIASOUP_RTC_MAX_PORT}
     env_file:
       - .env
     ports:
-      - "4443:4443"  # WebRTC und WebSocket Proxy für Mediasoup
-      - "8050:3000"  # Externer Port 8050 → interner Port 3000
+      - "4443:4443"  # WebRTC & WebSocket Proxy für Mediasoup
+      - "8050:3000"  # Next.js UI
+      - "${MEDIASOUP_RTC_MIN_PORT}-${MEDIASOUP_RTC_MAX_PORT}:${MEDIASOUP_RTC_MIN_PORT}-${MEDIASOUP_RTC_MAX_PORT}/udp"
 
 networks:
   nginx_network:
